@@ -7,15 +7,14 @@ import net.minecraft.world.level.block.Blocks;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Arrays;
 import java.util.List;
 
 public enum eChestConfigs implements StringRepresentable {
-    IRON(54, 9, 184, 222,256, 256),
-    COPPER(45, 9, 184, 204,256, 256),
+    IRON(54, 9, 184, 222, 256, 256),
+    COPPER(45, 9, 184, 204, 256, 256),
     GOLD(81, 9, 184, 276, 256, 276),
     DIAMOND(108, 12, 238, 276, 256, 276),
-    OBSIDIAN(108, 12, 238, 276,256, 276),
+    OBSIDIAN(108, 12, 238, 276, 256, 276),
     NETHERITE(108, 12, 238, 276, 256, 276);
 
     private final String name;
@@ -26,7 +25,7 @@ public enum eChestConfigs implements StringRepresentable {
     public final int textureXSize;
     public final int textureYSize;
 
-    eChestConfigs(int size, int rowLength, int xSize, int ySize, int textureXSize, int textureYSize){
+    eChestConfigs(int size, int rowLength, int xSize, int ySize, int textureXSize, int textureYSize) {
         this(null, size, rowLength, xSize, ySize, textureXSize, textureYSize);
     }
 
@@ -52,8 +51,8 @@ public enum eChestConfigs implements StringRepresentable {
 
     public static List<Block> get(eChestConfigs type) {
         return switch (type) {
-            case IRON -> Arrays.asList(ModBlocks.CHEST_IRON.get());
-            case COPPER -> Arrays.asList(ModBlocks.CHEST_COPPER.get());
+            case IRON -> List.of(ModBlocks.CHEST_IRON.get());
+            case COPPER -> List.of(ModBlocks.CHEST_COPPER.get());
             default -> List.of(Blocks.CHEST);
         };
     }
